--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,23 +9,24 @@ page-login {
   }
 
   img{
-    width: 150px;
+    width: 100px;
   }
 
-  h3{
+  h5{
     color: white;
-  }
-
-  .top-30{
-    margin-top: 30%;
-  }
-
-  .top-20{
-    margin-top: 20%;
   }
 
   .top-5{
     margin-top: 5%;
   }
+  .top-3{
+    margin-top: 3%;
+  }
 
+  .top-1{
+    margin-top: 1%;
+  }
+  .bottom-1{
+    margin-top: 1%;
+  }
 }
