--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,15 +1,7 @@
 <div *ngIf="mostrarSplash" class="splashScreen">
-  <div class="sk-cube-grid">
-    <div class="sk-cube sk-cube1"></div>
-    <div class="sk-cube sk-cube2"></div>
-    <div class="sk-cube sk-cube3"></div>
-    <div class="sk-cube sk-cube4"></div>
-    <div class="sk-cube sk-cube5"></div>
-    <div class="sk-cube sk-cube6"></div>
-    <div class="sk-cube sk-cube7"></div>
-    <div class="sk-cube sk-cube8"></div>
-    <div class="sk-cube sk-cube9"></div>
+  <div class="spinner">
+    <div class="double-bounce1"><img src="assets/imgs/logoPersonal.png" alt="login imagen"></div>
+    <div class="double-bounce2"><img src="assets/imgs/logoPersonal.png" alt="login imagen"></div>
   </div>
 </div>
-
 <ion-nav [root]="rootPage"></ion-nav>
