--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,2 +1,11 @@
 page-home {
+
+  .buttonLogout{
+    position: fixed;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    bottom: 10px;
+  }
+
 }
