--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,13 +37,14 @@ $colors: (
   primary:    #488aff,
   secondary:  #32db64,
   danger:     #f53d3d,
+  dangerDark: #461111,
   light:      #f4f4f4,
   dark:       #222,
   google:     #dd4b39,
   facebook:   #3b5998,
-  navBar:     #ad4b27,
+  navBar:     #ad5327,
   login:      #d75e2a,
-  loginOp:    rgba(#d1923e, 0.17),
+  loginOp:    rgba(#d1923e, 1),
 );
 
 
