--- a/src/pages/camara/camara.scss
+++ b/src/pages/camara/camara.scss
@@ -1,21 +1,53 @@
 page-camara {
 
-  .contenido{
-
+  ion-content .contenido{
+    position: absolute;
+    background-image: url('../assets/imgs/fondo.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
   }
 
   .seccionTitulo{
+    padding: 3px;
     background-color: rgb(218, 181, 98);
     font-size: 16px;
     font-style: oblique;
+    font-weight: bold;
     font-family: inherit;
-    border: 3px solid rgb(54, 37, 10);
+    border-top: 2px solid rgb(54, 37, 10);
+    border-bottom: 2px solid rgb(54, 37, 10);
     text-align: center;
   }
 
   .tituloLabel{
+    color: white;
     text-align: right;
+    font-size: 15px;
+    font-style: italic;
   }
+
+  .inputTitulo[type=text]{
+    background-color: rgba(232, 220, 203, 0.78);
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  }
+
+  .inputTitulo[type=text]:focus{
+    background-color: rgba(255, 255, 255, 1);
+  }
+
+  ion-item.item-md.item-input.input-has-focus .item-inner,
+  ion-item.item-md.item-input.ng-valid.input-has-value:not(.input-has-focus) .item-inner,
+  ion-item.item-md.item-input.ng-invalid.ng-touched:not(.input-has-focus) .item-inner {
+      border-bottom-color: #ffffff;
+      background-color: rgba(255, 255, 255, 1);
+      box-shadow: none;
+  }
+
 
   .buttonCamara{
     font-size: 40px;
