--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -46,6 +46,16 @@ page-login {
     margin:0px;
     width: 60px;
     height:100%;
+    border: 3px solid #653711;
+    background: #3d230c;
+    background: -moz-linear-gradient(45deg, #3d230c 0%, #e5852b 50%, #f28232 58%, #5e3523 100%);
+    background: -webkit-linear-gradient(45deg, #3d230c 0%,#e5852b 50%,#f28232 58%,#5e3523 100%);
+    background: linear-gradient(45deg, #3d230c 0%,#e5852b 50%,#f28232 58%,#5e3523 100%);
+  }
+
+  .buttonSubmit:active {
+    box-shadow: 0 5px 0 #362504;
+    background: #2d1907;
   }
 
   .iconoLogin{
