--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,11 +1,95 @@
 page-home {
 
+  .tituloApp{
+    font-family: "Comic Sans MS", cursive, sans-serif;
+  }
+
+  ion-content .contenido{
+    position: absolute;
+    background-image: url('../assets/imgs/fondo.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+  }
+
+  .introBox{
+    padding: 20px 0 20px 0;
+    max-width: auto;
+    width: 100%;
+  }
+
+  .introBox h3{
+    text-align: center;
+    background-color: rgba(83, 59, 17, 0.48);
+    width: 100%;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Georgia, serif;
+  }
+
+  .introBox p{
+    padding: 5px;
+    text-align: center;
+    background-color: rgba(94, 193, 236, 0.48);
+    color: rgb(15, 1, 1);
+    font-size: 20px;
+    font-family: Georgia, serif;
+    font-style: italic;
+  }
+
+  .panelBotones{
+    text-align: center;
+  }
+
+  .buttonCamara{
+    font-size: 40px;
+    height: 150px;
+    width: 150px;
+    margin: 0 auto;
+    border: 3px solid rgb(11, 15, 65);
+    border-radius: 50%;
+    background: rgb(0,0,0);
+    background: -moz-linear-gradient(45deg, rgba(0,0,0,1) 1%, rgba(64,150,238,1) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(0,0,0,1) 1%,rgba(64,150,238,1) 100%);
+    background: linear-gradient(45deg, rgba(0,0,0,1) 1%,rgba(64,150,238,1) 100%);
+  }
+
+  .buttonSubir{
+    font-size: 40px;
+    height: 150px;
+    width: 150px;
+    margin: 0 auto;
+    border-radius: 50%;
+    border: 3px solid rgb(15, 65, 11);
+    background: rgb(211,255,130);
+    background: -moz-linear-gradient(45deg, rgba(211,255,130,1) 2%, rgba(117,211,69,1) 44%, rgba(74,150,49,1) 65%, rgba(0,0,0,1) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(211,255,130,1) 2%,rgba(117,211,69,1) 44%,rgba(74,150,49,1) 65%,rgba(0,0,0,1) 100%);
+    background: linear-gradient(45deg, rgba(211,255,130,1) 2%,rgba(117,211,69,1) 44%,rgba(74,150,49,1) 65%,rgba(0,0,0,1) 100%);
+  }
+
+  .buttonSubir:active {
+    box-shadow: 0 5px 0 #043609;
+    background: #0f4e31;
+    top: 5px;
+  }
+
   .buttonLogout{
+    margin-left: 5px;
     position: fixed;
     border-radius: 50%;
     height: 50px;
     width: 50px;
     bottom: 10px;
+    background: rgb(243,197,189);
+    background: -moz-linear-gradient(45deg, rgba(243,197,189,1) 0%, rgba(232,108,87,1) 50%, rgba(234,40,3,1) 51%, rgba(255,102,0,1) 75%, rgba(199,34,0,1) 100%);
+    background: -webkit-linear-gradient(45deg, rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%);
+    background: linear-gradient(45deg, rgba(243,197,189,1) 0%,rgba(232,108,87,1) 50%,rgba(234,40,3,1) 51%,rgba(255,102,0,1) 75%,rgba(199,34,0,1) 100%);
+  }
+
+  #userLogo{
+    font-size: 35px;
   }
 
 }
