--- a/src/pages/camara/camara.scss
+++ b/src/pages/camara/camara.scss
@@ -1,10 +1,11 @@
 page-camara {
 
-  ion-content .contenido{
-    position: absolute;
+  ion-content{
+    position: fixed;
     background-image: url('../assets/imgs/fondo.jpg');
-    background-size: 100% 100%;
     background-repeat: no-repeat;
+    background-position: center;
+    object-fit: fill;
     width: 100%;
     height: 100%;
   }
@@ -56,6 +57,12 @@ page-camara {
       box-shadow: none;
   }
 
+  .imgContainer{
+    display: grid;
+    margin: 0 auto;
+    text-align: center;
+  }
+
   .filaBotones{
     text-align: center;
   }
@@ -90,9 +97,46 @@ page-camara {
     top: 5px;
   }
 
-  .imagen{
+  .imagenAsubir{
+    border: 3px solid white;
+    background-color: rgba(9, 0, 1, 0.75);
     height: 100px;
     width: 100px;
+  }
+
+  .imagen{
+    height: 100%;
+    width: 100%;
+  }
+
+  .spinner {
+    width: 100px;
+    height: 100px;
+    margin: 100px auto;
+    background-color: rgba(#333333, 0);
+
+    border-radius: 100%;
+    -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
+    animation: sk-scaleout 1.0s infinite ease-in-out;
+  }
+
+  @-webkit-keyframes sk-scaleout {
+    0% { -webkit-transform: scale(0) }
+    100% {
+      -webkit-transform: scale(1.0);
+      opacity: 0;
+    }
+  }
+
+  @keyframes sk-scaleout {
+    0% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+    } 100% {
+      -webkit-transform: scale(1.0);
+      transform: scale(1.0);
+      opacity: 0;
+    }
   }
 
 }
