--- a/src/pages/camara/camara.scss
+++ b/src/pages/camara/camara.scss
@@ -11,11 +11,11 @@ page-camara {
   }
 
   .LINDAS{
-    background-color: rgba(80, 222, 103, 0.41);
+    background-color: rgba(80, 222, 103, 0.53);
   }
 
   .FEAS{
-    background-color: rgba(218, 74, 74, 0.53);
+    background-color: rgba(218, 74, 74, 0.57);
   }
 
   #seccionTitulo{
@@ -58,7 +58,7 @@ page-camara {
   }
 
   .imgContainer{
-    display: grid;
+    display: inline-flex;
     margin: 0 auto;
     text-align: center;
   }
