--- a/src/pages/lista/lista.scss
+++ b/src/pages/lista/lista.scss
@@ -8,8 +8,8 @@ page-lista {
     background: linear-gradient(45deg, rgba(38,21,7,1) 0%,rgba(186,98,35,1) 39%,rgba(221,135,73,1) 63%,rgba(249,227,174,1) 100%);
   }
 
-  ion-card {
-    border-top: 5px solid rgb(29, 63, 236);
+  .img-loaded + ion-spinner {
+    display:none;
   }
 
   .galeriaContenido{
@@ -35,11 +35,13 @@ page-lista {
   }
 
   .LINDAS{
-    background-color: rgba(23, 221, 55, 0.41);
+    background-color: rgba(57, 218, 83, 0.41);
+    border-top: 10px solid rgb(46, 236, 29);
   }
 
   .FEAS{
-    background-color: rgba(222, 22, 22, 0.53);
+    background-color: rgba(223, 58, 58, 0.53);
+    border-top: 10px solid rgb(236, 29, 29);
   }
 
   .imgBox {
