--- a/src/pages/lista/lista.scss
+++ b/src/pages/lista/lista.scss
@@ -8,6 +8,10 @@ page-lista {
     background: linear-gradient(45deg, rgba(38,21,7,1) 0%,rgba(186,98,35,1) 39%,rgba(221,135,73,1) 63%,rgba(249,227,174,1) 100%);
   }
 
+  .floatBack{
+    position: fixed;
+  }
+
   .img-loaded + ion-spinner {
     display:none;
   }
@@ -24,14 +28,16 @@ page-lista {
     display: flex;
   }
 
-  .imgSource{
+  .imgSource_1{
     max-width: 100%;
     height: auto;
+    border: 2px solid white;
   }
 
-  .imgSource_extra{
+  .imgSource_2, .imgSource_3{
     max-width: 50%;
     max-height: 150px;
+    border: 2px solid white;
   }
 
   .LINDAS{
